Modify List caches for CD records for speed